--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,4 +1,4 @@
-div {
+/* div {
     background-color: rebeccapurple;
     padding: 20px;
     margin-bottom: 10px;
@@ -12,4 +12,4 @@ h3{
 }
 p,li {
     font-size: 18px;
-}
+} */
